# mind_controled_robot

./: .gitignore  README.md
model_set/: models.py
ros_workspace/src/bb8/bb_8_description/launch/: spawn.launch
ros_workspace/src/bb8/bb_8_gazebo/src/: gazebo_bb_8_controller.cpp
ros_workspace/src/bb8/bb_8_gazebo/src/gazebo_plugins/: gazebo_plugins_interface.py
ros_workspace/src/bb8/bb_8_teleop/scripts/: bb_8_teleop_key
ros_workspace/src/mcr/mcr_bci_emulator/: CMakeLists.txt  package.xml
ros_workspace/src/mcr/mcr_bci_emulator/launch/: main.launch
ros_workspace/src/mcr/mcr_bci_emulator/nodes/: mcr_bci_data_loader.py  mcr_bci_emulator.py  mcr_bci_intention_controller.py
ros_workspace/src/mcr/mcr_bci_emulator/nodes/presentation_layer/: init_msg.txt
ros_workspace/src/mcr/mcr_gui/: CMakeLists.txt  package.xml
ros_workspace/src/mcr/mcr_gui/launch/: main.launch
ros_workspace/src/mcr/mcr_gui/nodes/: mcr_gui.py  mcr_gui_server.py
ros_workspace/src/mcr/mcr_main/: CMakeLists.txt  package.xml
ros_workspace/src/mcr/mcr_main/launch/: mcr_main.launch
ros_workspace/src/mcr/mcr_messages/: CMakeLists.txt  package.xml
ros_workspace/src/mcr/mcr_messages/msg/: mcr_control_monit.msg  mcr_datastream.msg  mcr_intention.msg  mcr_predictions.msg
ros_workspace/src/mcr/mcr_ml_classifier/: CMakeLists.txt  package.xml
ros_workspace/src/mcr/mcr_ml_classifier/launch/: main.launch
ros_workspace/src/mcr/mcr_ml_classifier/nodes/: mcr_ml_classifier.py  mcr_model.py
ros_workspace/src/mcr/mcr_ml_classifier/nodes/models/ffnet_in_640_cl_700/: finalized_model.sav  keras_metadata.pb  saved_model.pb
ros_workspace/src/mcr/mcr_ml_classifier/nodes/models/ffnet_in_640_cl_700/variables/: variables.index
ros_workspace/src/mcr/mcr_ml_classifier/nodes/presentation_layer/: init_msg.txt
ros_workspace/src/mcr/mcr_robot_controls/: CMakeLists.txt  package.xml
ros_workspace/src/mcr/mcr_robot_controls/launch/: main.launch  mcr_robot_controls.launch
ros_workspace/src/mcr/mcr_robot_controls/nodes/: mcr_control_routines.py  mcr_robot_controls.py
ros_workspace/src/mcr/mcr_robot_controls/nodes/presentation_layer/: init_msg.txt
