<package>
  <name>mcr_messages</name>
  <version>0.1.0</version>
  <description>
    Messages for use with mcr framework.
  </description>

  <author>Majk</author>
  <maintainer email="r@r.com">Tstrski</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  

  <run_depend>message_runtime</run_depend>
  <run_depend>std_msgs</run_depend>

</package>
